grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.labeled_statement,
        $._unlabeled_statement,
      ),

    labeled_statement: ($) => seq(repeat1($.statement_prefix), $._unlabeled_statement),

    statement_prefix: ($) =>
      choice(
        seq(field('label', $.identifier), ':'),
        seq('(', commaSep1($.identifier), ')', ':'),
      ),

    _unlabeled_statement: ($) =>
      choice(
        $.null_statement,
        $.package_statement,
        $.procedure_statement,
        $.begin_statement,
        $.do_statement,
        $.select_statement,
        $.if_statement,
        $.declare_statement,
        $.assignment_statement,
        $.call_statement,
        $.fetch_statement,
        $.return_statement,
        $.goto_statement,
        $.stop_statement,
        $.iterate_statement,
        $.leave_statement,
        $.entry_statement,
        $.on_statement,
        $.revert_statement,
        $.signal_statement,
        $.get_statement,
        $.put_statement,
        $.open_statement,
        $.close_statement,
        $.read_statement,
        $.write_statement,
        $.rewrite_statement,
        $.delete_statement,
        $.allocate_statement,
        $.free_statement,
        $.format_statement,
        $.default_statement,
        $.exec_statement,
        $.preprocessor_include,
        $.preprocessor_declare,
        $.preprocessor_assignment,
        $.preprocessor_if_statement,
        $.preprocessor_do_statement,
        $.preprocessor_simple,
      ),

    procedure_statement: ($) => seq($.procedure_heading, repeat($._statement), $.end_statement),

    procedure_heading: ($) =>
      seq(
        choice(kw('PROCEDURE'), kw('PROC')),
        optional($.parameter_list),
        repeat($._block_attribute),
        ';',
      ),

    end_statement: ($) => seq(kw('END'), optional($.identifier), ';'),

    do_statement: ($) =>
      seq(kw('DO'), optional($.do_specification), ';', repeat($._statement), $.end_statement),

    do_specification: ($) =>
      choice(
        seq(kw('WHILE'), '(', $._expression, ')'),
        seq(kw('UNTIL'), '(', $._expression, ')'),
        seq(
          field('control', $._expression),
          '=',
          commaSep1($.do_specification_element),
          optional(seq(kw('WHILE'), '(', $._expression, ')')),
          optional(seq(kw('UNTIL'), '(', $._expression, ')')),
        ),
      ),

    do_specification_element: ($) =>
      choice(
        seq(
          field('from', $._expression),
          optional(seq(kw('TO'), field('to', $._expression))),
          optional(seq(kw('BY'), field('by', $._expression))),
        ),
        seq(
          field('from', $._expression),
          kw('BY'),
          field('by', $._expression),
          kw('TO'),
          field('to', $._expression),
        ),
        seq(field('from', $._expression), kw('REPEAT'), '(', field('repeat', $._expression), ')'),
      ),

    select_statement: ($) =>
      seq(
        kw('SELECT'),
        optional(seq('(', $._expression, ')')),
        ';',
        repeat($.when_clause),
        optional($.otherwise_clause),
        $.end_statement,
      ),

    when_clause: ($) => seq(kw('WHEN'), '(', commaSep1($._expression), ')', $._statement),

    otherwise_clause: ($) => seq(kw('OTHERWISE'), $._statement),

    if_statement: ($) =>
      prec.right(
        seq(
          kw('IF'),
          field('condition', $._expression),
          kw('THEN'),
          field('consequence', $._statement),
          optional(seq(kw('ELSE'), field('alternative', $._statement))),
        ),
      ),

    // -- Declarations -----------------------------------------------------

    declare_statement: ($) =>
      seq(choice(kw('DECLARE'), kw('DCL')), commaSep1($.declaration_item), ';'),

    declaration_item: ($) =>
      seq(
        optional(field('level', $.level_number)),
        field('name', choice($.identifier, $.factored_name_list)),
        repeat($._attribute),
      ),

    factored_name_list: ($) => seq('(', commaSep1($.factored_name), ')'),

    factored_name: ($) => seq($.identifier, optional($.dimension_attribute)),

    level_number: (_$) => /[0-9]+/,

    _attribute: ($) => choice($.dimension_attribute, $._block_attribute),

    // Attributes usable on a procedure/entry/begin/package heading, i.e.
    // everything except `dimension_attribute` -- which would otherwise be
    // ambiguous with a leading parameter list, e.g. `PROC(X, Y);`.
    _block_attribute: ($) =>
      choice(
        $.fixed_attribute,
        $.float_attribute,
        $.decimal_attribute,
        $.binary_attribute,
        $.char_attribute,
        $.bit_attribute,
        $.picture_attribute,
        $.pointer_attribute,
        $.offset_attribute,
        $.area_attribute,
        $.simple_attribute,
        $.entry_attribute,
        $.returns_attribute,
        $.like_attribute,
        $.defined_attribute,
        $.based_attribute,
        $.init_attribute,
        $.options_attribute,
        $.environment_attribute,
      ),

    precision: ($) => seq('(', $._expression, optional(seq(',', $._expression)), ')'),

    fixed_attribute: ($) =>
      prec.right(seq(choice(kw('FIXED'), kw('FIXEDOVERFLOW')), optional($.precision))),
    float_attribute: ($) => prec.right(seq(kw('FLOAT'), optional($.precision))),
    decimal_attribute: ($) =>
      prec.right(seq(choice(kw('DECIMAL'), kw('DEC')), optional($.precision))),
    binary_attribute: ($) =>
      prec.right(seq(choice(kw('BINARY'), kw('BIN')), optional($.precision))),

    length_spec: ($) =>
      seq(
        '(',
        choice($._expression, '*'),
        optional(seq(kw('REFER'), '(', $._expression, ')')),
        ')',
      ),

    char_attribute: ($) =>
      prec.right(
        seq(
          choice(kw('CHARACTER'), kw('CHAR')),
          optional($.length_spec),
          optional(choice(kw('VARYING'), kw('VAR'), kw('VARYINGZ'), kw('NONVARYING'))),
        ),
      ),

    bit_attribute: ($) =>
      prec.right(
        seq(
          kw('BIT'),
          optional($.length_spec),
          optional(choice(kw('VARYING'), kw('VAR'), kw('VARYINGZ'))),
        ),
      ),

    picture_attribute: ($) => seq(choice(kw('PICTURE'), kw('PIC')), $.string_literal),

    pointer_attribute: ($) => choice(kw('POINTER'), kw('PTR')),

    simple_attribute: ($) =>
      choice(
        kw('FILE'),
        kw('LABEL'),
        kw('FORMAT'),
        kw('TASK'),
        kw('EVENT'),
        kw('STREAM'),
        kw('RECORD'),
        kw('INPUT'),
        kw('OUTPUT'),
        kw('UPDATE'),
        kw('SEQUENTIAL'),
        kw('DIRECT'),
        kw('BUFFERED'),
        kw('UNBUFFERED'),
        kw('PRINT'),
        kw('BACKWARDS'),
        kw('KEYED'),
        kw('TRANSIENT'),
        kw('EXCLUSIVE'),
        kw('ABNORMAL'),
        kw('NORMAL'),
        kw('VARIABLE'),
        kw('IRREDUCIBLE'),
        kw('REDUCIBLE'),
        kw('ASSIGNABLE'),
        kw('NONASSIGNABLE'),
        kw('BUILTIN'),
        kw('STATIC'),
        kw('AUTOMATIC'),
        kw('AUTO'),
        kw('CONTROLLED'),
        kw('CTL'),
        kw('INTERNAL'),
        kw('INT'),
        kw('EXTERNAL'),
        kw('EXT'),
        kw('PARAMETER'),
        kw('PARM'),
        kw('ALIGNED'),
        kw('UNALIGNED'),
        kw('UNAL'),
        kw('SIGNED'),
        kw('UNSIGNED'),
        kw('UNION'),
        kw('COMPLEX'),
        kw('CPLX'),
        kw('REAL'),
        kw('CONDITION'),
        kw('GENERIC'),
      ),

    entry_attribute: ($) =>
      prec.right(
        seq(
          kw('ENTRY'),
          optional(seq('(', optional(commaSep1($.attribute_spec)), ')')),
          repeat(choice($.returns_attribute, kw('VARIABLE'), $.options_attribute)),
        ),
      ),

    returns_attribute: ($) => seq(kw('RETURNS'), '(', $.attribute_spec, ')'),

    attribute_spec: ($) => repeat1($._attribute),

    based_attribute: ($) => prec.right(seq(kw('BASED'), optional(seq('(', $.reference, ')')))),

    init_attribute: ($) =>
      seq(choice(kw('INITIAL'), kw('INIT')), '(', commaSep1($.init_item), ')'),

    init_item: ($) =>
      seq(optional(seq(field('repetition', $._expression), '*')), field('value', $._expression)),

    dimension_attribute: ($) => seq('(', commaSep1($.bound), ')'),

    bound: ($) =>
      seq(
        optional(seq(field('lower', choice($._expression, '*')), ':')),
        field('upper', choice($._expression, '*')),
      ),

    options_attribute: ($) => seq(kw('OPTIONS'), $.paren_group),

    paren_group: ($) =>
      seq('(', repeat(choice($.identifier, $.number, $.string_literal, $.paren_group)), ')'),

    // -- Simple statements ------------------------------------------------

    assignment_statement: ($) =>
      seq(
        commaSep1(field('target', $.reference)),
        '=',
        field('value', $._expression),
        optional(seq(kw('BY'), kw('NAME'))),
        ';',
      ),

    call_statement: ($) =>
      seq(
        kw('CALL'),
        field('entry', $.reference),
        optional($.argument_list),
        repeat($.call_option),
        ';',
      ),

    argument_list: ($) => seq('(', optional(commaSep1($.argument)), ')'),

    return_statement: ($) => seq(kw('RETURN'), optional(seq('(', $._expression, ')')), ';'),

    goto_statement: ($) =>
      seq(choice(kw('GOTO'), seq(kw('GO'), kw('TO'))), field('label', $.reference), ';'),

    exec_statement: ($) =>
      seq(kw('EXEC'), field('language', $.identifier), repeat($._exec_token), ';'),

    _exec_token: ($) =>
      choice(
        seq(kw('INCLUDE'), field('member', $.identifier)),
        seq(choice(kw('FROM'), kw('JOIN')), field('table', $.identifier)),
        seq(choice(kw('OPEN'), kw('CLOSE'), kw('FETCH')), field('cursor', $.identifier)),
        seq(kw('INTO'), choice($.host_variable, field('table', $.identifier))),
        prec(1, seq(kw('UPDATE'), field('table', $.identifier))),
        $._sql_keyword,
        $.identifier,
        $.number,
        $.string_literal,
        $.host_variable,
        '(',
        ')',
        ',',
        '.',
        '*',
        '+',
        '-',
        '/',
        '=',
        '<',
        '>',
        '<=',
        '>=',
        '<>',
        '||',
      ),

    host_variable: ($) => seq(':', $.identifier),

    // ------------------------------------------------------------------
    // Preprocessor (%) statements
    // ------------------------------------------------------------------

    _expression: ($) =>
      choice(
        $.number,
        $.string_literal,
        $.bit_literal,
        $.hex_literal,
        $.reference,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    binary_expression: ($) =>
      choice(
        prec.right(6, seq(field('left', $._expression), '**', field('right', $._expression))),
        prec.left(4, seq(field('left', $._expression), field('operator', choice('*', '/')), field('right', $._expression))),
        prec.left(3, seq(field('left', $._expression), field('operator', choice('+', '-', '||', '!!')), field('right', $._expression))),
        prec.left(
          2,
          seq(
            field('left', $._expression),
            field(
              'operator',
              choice('<', '<=', '=', '>', '>=', '¬=', '^=', '¬<', '^<', '¬>', '^>'),
            ),
            field('right', $._expression),
          ),
        ),
        prec.left(1, seq(field('left', $._expression), '&', field('right', $._expression))),
        prec.left(0, seq(field('left', $._expression), choice('|', '!'), field('right', $._expression))),
      ),

    reference: ($) =>
      prec.left(
        seq(
          $._name,
          repeat(
            choice(
              seq('(', optional(commaSep1($.argument)), ')'),
              seq('.', $._name),
              seq('->', $._name),
            ),
          ),
        ),
      ),

    _name: ($) => choice($.identifier, $.builtin_name),

    identifier: (_$) => /[A-Za-z#$@][A-Za-z0-9#$@_]*/,

    number: (_$) =>
      token(
        seq(
          choice(seq(/[0-9]+/, optional(seq('.', /[0-9]*/))), seq('.', /[0-9]+/)),
          optional(seq(/[Ee]/, optional(/[+-]/), /[0-9]+/)),
          optional(/[Bb]/),
          optional(/[Ii]/),
        ),
      ),

    // Multics PL/I uses " as a string delimiter; Enterprise PL/I only '.
    string_literal: (_$) =>
      token(
        choice(
          seq("'", repeat(choice(/[^']/, "''")), "'"),
          seq('"', repeat(choice(/[^"]/, '""')), '"'),
        ),
      ),

    bit_literal: ($) => seq($.string_literal, token.immediate(/[Bb]/)),
