test/corpus/embedded_sql.txt
================================================================================
exec sql with host variables
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL SELECT EMPNO INTO :EMPNO FROM EMPLOYEE WHERE DEPT = :DEPTNO;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier)
        (identifier)
        (host_variable
          (identifier))
        table: (identifier)
        (identifier)
        (host_variable
          (identifier)))
      (end_statement
        (identifier)))))

================================================================================
exec sql without host variables
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL COMMIT;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier))
      (end_statement
        (identifier)))))

================================================================================
exec sql include tags the member
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL INCLUDE SQLCA;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier)
        member: (identifier))
      (end_statement
        (identifier)))))

================================================================================
exec sql cursor lifecycle tags table and cursor
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL DECLARE C1 CURSOR FOR SELECT EMPNO FROM EMPLOYEE;
   EXEC SQL OPEN C1;
   EXEC SQL FETCH C1 INTO :EMPNO;
   EXEC SQL CLOSE C1;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier)
        (identifier)
        (identifier)
        table: (identifier))
      (exec_statement
        language: (identifier)
        cursor: (identifier))
      (exec_statement
        language: (identifier)
        cursor: (identifier)
        (host_variable
          (identifier)))
      (exec_statement
        language: (identifier)
        cursor: (identifier))
      (end_statement
        (identifier)))))

================================================================================
exec sql insert and update tag their table
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL INSERT INTO EMPLOYEE VALUES (:EMPNO, :EMPNAME);
   EXEC SQL UPDATE EMPLOYEE SET SALARY = SALARY * 1.1 WHERE EMPNO = :EMPNO;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier)
        table: (identifier)
        (host_variable
          (identifier))
        (host_variable
          (identifier)))
      (exec_statement
        language: (identifier)
        table: (identifier)
        (identifier)
        (identifier)
        (number)
        (identifier)
        (host_variable
          (identifier)))
      (end_statement
        (identifier)))))

================================================================================
exec sql FOR UPDATE OF stays untagged (UPDATE not followed by a table)
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   EXEC SQL DECLARE C1 CURSOR FOR SELECT EMPNO FROM EMPLOYEE FOR UPDATE OF SALARY;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (exec_statement
        language: (identifier)
        (identifier)
        (identifier)
        table: (identifier)
        (identifier))
      (end_statement
        (identifier)))))

================================================================================
SQL-only keywords stay ordinary PL/I identifiers outside EXEC SQL
================================================================================
P: PROCEDURE OPTIONS(MAIN);
   DCL CASE FIXED BINARY(31);
   DCL VALUES FIXED BINARY(31);
   CASE = VALUES + 1;
END P;
--------------------------------------------------------------------------------

(source_file
  (labeled_statement
    (statement_prefix
      label: (identifier))
    (procedure_statement
      (procedure_heading
        (options_attribute
          (paren_group
            (identifier))))
      (declare_statement
        (declaration_item
          name: (identifier)
          (fixed_attribute)
          (binary_attribute
            (precision
              (number)))))
      (declare_statement
        (declaration_item
          name: (identifier)
          (fixed_attribute)
          (binary_attribute
            (precision
              (number)))))
      (assignment_statement
        target: (reference
          (identifier))
        value: (binary_expression
          left: (reference
            (identifier))
          right: (number)))
      (end_statement
        (identifier)))))

